--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "df = pd.read_csv('C:\\\\Users\\\\ginte\\\\OneDrive\\\\Pulpit\\\\Komp analiza szeregów czasowych\\\\projekt2\\\\data.csv')"
+    "df = pd.read_csv('data.csv')"
    ]
   },
   {
