--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# Import libraries\n",
-    "import numpy as np\n",
+    "import numpya as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
